# llm-utils

./: .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml
src/llm_utils/: __init__.py
src/llm_utils/communication_utils/: __init__.py
src/llm_utils/communication_utils/models/: __init__.py  cad_machining_feature.py  cad_part.py  cad_shape_binarizer.py  communication_utils.py  directions.py  unique_color_supplier.py  view_orientation.py
src/llm_utils/communication_utils/utils/: color_utils.py  parsing_utils.py
src/llm_utils/openai_api/: __init__.py  assistant_message.py  chat.py  chat_factory.py  image_message_content.py  message.py  message_content.py  message_content_factory.py  message_content_type.py  message_factory.py  message_role.py  system_message.py  text_message_content.py  user_message.py  utils.py
src/llm_utils/prompt_generation/: __init__.py  prompt.py  utils.py
src/llm_utils/textgen_api/: __init__.py  textgen_api.py  textgen_api_connection.py  textgen_api_connections.py  usage.py
